*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.1 ===
* Fixed typos.

=== 1.0.0 ===
* Initial release.
