@@ -42,18 +42,20 @@
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.preprocessor.def.1754490118" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="LSP_TESTING"/>
-									<listOptionValue builtIn="false" value="USE_LIBJACK"/>
-									<listOptionValue builtIn="false" value="USE_LIBXRANDR"/>
-									<listOptionValue builtIn="false" value="USE_LADSPA"/>
-									<listOptionValue builtIn="false" value="USE_LIBFREETYPE"/>
-									<listOptionValue builtIn="false" value="USE_LIBCAIRO"/>
-									<listOptionValue builtIn="false" value="USE_LIBX11"/>
 									<listOptionValue builtIn="false" value="LSP_TRACE"/>
 									<listOptionValue builtIn="false" value="LSP_IDE_DEBUG"/>
+									<listOptionValue builtIn="false" value="USE_LADSPA"/>
+									<listOptionValue builtIn="false" value="USE_LIBCAIRO"/>
+									<listOptionValue builtIn="false" value="USE_LIBFONTCONFIG"/>
+									<listOptionValue builtIn="false" value="USE_LIBFREETYPE"/>
+									<listOptionValue builtIn="false" value="USE_LIBGL"/>
+									<listOptionValue builtIn="false" value="USE_LIBJACK"/>
 									<listOptionValue builtIn="false" value="USE_LIBSNDFILE"/>
+									<listOptionValue builtIn="false" value="USE_LIBX11"/>
+									<listOptionValue builtIn="false" value="USE_LIBXRANDR"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.dialect.std.197954724" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.other.other.254051967" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 $(shell pkg-config --cflags jack x11 cairo sndfile gl freetype2 xrandr gstreamer-audio-1.0)" valueType="string"/>
+								<option id="gnu.cpp.compiler.option.other.other.254051967" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 $(shell pkg-config --cflags jack x11 cairo sndfile gl freetype2 fontconfig xrandr gstreamer-audio-1.0)" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.warnings.toerrors.525712114" name="Warnings as errors (-Werror)" superClass="gnu.cpp.compiler.option.warnings.toerrors" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="gnu.cpp.compiler.option.debugging.sanitaddress.1693651654" name="Sanitize address (-fsanitize=address)" superClass="gnu.cpp.compiler.option.debugging.sanitaddress" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.449118389" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
@@ -62,18 +64,20 @@
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.exe.debug.option.optimization.level.834488426" name="Optimization Level" superClass="gnu.c.compiler.exe.debug.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
 								<option defaultValue="gnu.c.debugging.level.max" id="gnu.c.compiler.exe.debug.option.debugging.level.1949011073" name="Debug Level" superClass="gnu.c.compiler.exe.debug.option.debugging.level" useByScannerDiscovery="false" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.preprocessor.def.symbols.197520422" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
-									<listOptionValue builtIn="false" value="LSP_TRACE"/>
-									<listOptionValue builtIn="false" value="USE_LIBJACK"/>
-									<listOptionValue builtIn="false" value="USE_LIBXRANDR"/>
-									<listOptionValue builtIn="false" value="USE_LIBCAIRO"/>
-									<listOptionValue builtIn="false" value="USE_LIBFREETYPE"/>
-									<listOptionValue builtIn="false" value="USE_LADSPA"/>
-									<listOptionValue builtIn="false" value="USE_LIBX11"/>
 									<listOptionValue builtIn="false" value="LSP_TESTING"/>
+									<listOptionValue builtIn="false" value="LSP_TRACE"/>
 									<listOptionValue builtIn="false" value="LSP_IDE_DEBUG"/>
+									<listOptionValue builtIn="false" value="USE_LADSPA"/>
+									<listOptionValue builtIn="false" value="USE_LIBCAIRO"/>
+									<listOptionValue builtIn="false" value="USE_LIBFONTCONFIG"/>
+									<listOptionValue builtIn="false" value="USE_LIBFREETYPE"/>
+									<listOptionValue builtIn="false" value="USE_LIBGL"/>
+									<listOptionValue builtIn="false" value="USE_LIBJACK"/>
 									<listOptionValue builtIn="false" value="USE_LIBSNDFILE"/>
+									<listOptionValue builtIn="false" value="USE_LIBX11"/>
+									<listOptionValue builtIn="false" value="USE_LIBXRANDR"/>
 								</option>
-								<option id="gnu.c.compiler.option.misc.other.1620238063" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 $(shell pkg-config --cflags jack x11 cairo sndfile gl freetype2 xrandr gstreamer-audio-1.0)" valueType="string"/>
+								<option id="gnu.c.compiler.option.misc.other.1620238063" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 $(shell pkg-config --cflags jack x11 cairo sndfile gl freetype2 fontconfig xrandr gstreamer-audio-1.0)" valueType="string"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.398423821" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/modules/lsp-plugins-shared/include}&quot;"/>
@@ -95,7 +99,7 @@
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.2125987081" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
 							<tool commandLinePattern="${COMMAND} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT} ${INPUTS} ${FLAGS}" id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.1192217523" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
-								<option id="gnu.cpp.link.option.flags.372033104" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-fsanitize=address $(shell pkg-config --libs jack x11 cairo sndfile gl freetype2 xrandr gstreamer-audio-1.0)" valueType="string"/>
+								<option id="gnu.cpp.link.option.flags.372033104" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-fsanitize=address $(shell pkg-config --libs jack x11 cairo sndfile gl freetype2 fontconfig xrandr gstreamer-audio-1.0)" valueType="string"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.libs.1822061934" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs">
 									<listOptionValue builtIn="false" value="pthread"/>
 									<listOptionValue builtIn="false" value="rt"/>
